--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </figure> 
 
              
-                    <h4>Atualizado em Outubro/2022</h4>
+                    <h4>Atualizado em 10 de Outubro de 2022</h4>
 
                         
         </body>
