atualizando foto inicial

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <figure class="foto-legenda">
-        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/backend-img%202.jpeg?raw=true" alt="minha imagem">
+        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/backend-img%202.jpeg" alt="minha imagem">
 
 
         <figcaption>
