atualização dos links das imagens

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </span><br /></h2>
 
     <div class="foto-hello">
-        <img src="_imagens/eu_logo.png">
+        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/eu_logo.png?raw=true">
         <alt="foto backend">
             <p>Eu sou o Joel Júnior, tenho 41 anos sou Pernambucano mais moro em Fortaleza-Ce desde<br /> o inicio dos
                 anos 90.
@@ -58,15 +58,15 @@
         </span></h3>
 
     <figure class="foto-Habilidades">
-        <img src="_imagens/HTML5.png">
+        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/HTML5.png?raw=true">
         <alt="imagem html5" align="right>
                 
                 <figure class=" foto-Habilidades">
-            <img src="_imagens/JS-IMG.png">
+            <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/JS-IMG.png?raw=true">
             <alt="imagem Java" align="right>
 
                     <figure class=" foto-Habilidades">
-                <img src="_imagens/CSS 3-IMG.png">
+                <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/CSS%203-IMG.png?raw=true">
                 <alt="imagem css3">
     </figure>
     <br />
@@ -75,14 +75,14 @@
         </span></h3>
 
     <figure class="foto-fale">
-        <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/"><img src="_imagens/imagens linkedin.png" width="70px"
+        <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/"><img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/imagens%20linkedin.png?raw=true" width="70px"
                 align="left"></a>
 
         <figure class="foto-fale"> &nbsp;&nbsp;
-            <a href="http://instagram.com/joel_ramos2304"><img src="_imagens/instagram-icone.png" width="70px" align="left </a>
+            <a href="http://instagram.com/joel_ramos2304"><img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/instagram-icone.png?raw=true" width="70px" align="left </a>
             
             <figure class=" foto-fale">
-                <a href="https://discord.com/channels/@me"><img src="_imagens/images discord.png" width="70px"
+                <a href="https://discord.com/channels/@me"><img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/images%20discord.png?raw=true" width="70px"
                         align="left"> </a>
         </figure>
 
