Corrigindo código na pasta img

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </span><br /></h2>
 
     <div class="foto-hello">
-        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/eu_logo.png?raw=true">
+        <img src="Imagens/backend-img%202">
         <alt="foto backend">
             <p>Eu sou o Joel Júnior, tenho 41 anos sou Pernambucano mais moro em Fortaleza-Ce desde<br /> o inicio dos
                 anos 90.
@@ -58,7 +58,7 @@
         </span></h3>
 
     <figure class="foto-Habilidades">
-        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/HTML5.png?raw=true">
+        <img src="Imagens/html5>
         <alt="imagem html5" align="right>
                 
                 <figure class=" foto-Habilidades">
