Ajustando pasta imagens

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <figure class="foto-legenda">
-        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/backend-img%202.jpeg?raw=true" alt="minha imagem">
+        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/backend-img%202.jpeg?raw=true" alt="foto backend">
 
 
         <figcaption>
@@ -42,8 +42,8 @@
         </span><br /></h2>
 
     <div class="foto-hello">
-        <img src="Imagens/backend-img%202">
-        <alt="foto backend">
+        <img src="Imagens/eu_logo.png">
+        <alt="minha imagem">
             <p>Eu sou o Joel Júnior, tenho 41 anos sou Pernambucano mais moro em Fortaleza-Ce desde<br /> o inicio dos
                 anos 90.
                 Sou Bombeiro Civíl a mais de 10 anos e estou em processo de transição<br /> de carreira para a área de
@@ -58,7 +58,7 @@
         </span></h3>
 
     <figure class="foto-Habilidades">
-        <img src="Imagens/html5>
+        <img src="Imagens/html5">
         <alt="imagem html5" align="right>
                 
                 <figure class=" foto-Habilidades">
