Ajustando Link das imagens no HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <figure class="foto-legenda">
-        <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/backend-img%202.jpeg?raw=true" alt="foto backend">
+        <img src="Imagens/backend-img 2.jpeg" alt="Imagem backend">
 
 
         <figcaption>
@@ -58,15 +58,15 @@
         </span></h3>
 
     <figure class="foto-Habilidades">
-        <img src="Imagens/html5">
+        <img src="Imagens/HTML5.png">
         <alt="imagem html5" align="right>
                 
                 <figure class=" foto-Habilidades">
-            <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/JS-IMG.png?raw=true">
+            <img src="Imagens/JS-IMG.png">
             <alt="imagem Java" align="right>
 
                     <figure class=" foto-Habilidades">
-                <img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/CSS%203-IMG.png?raw=true">
+                <img src="Imagens/CSS 3-IMG.png">
                 <alt="imagem css3">
     </figure>
     <br />
