--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
         </span></h3>
 
     <figure class="foto-fale">
-        <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/"><img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/imagens%20linkedin.png?raw=true" width="30px"
+        <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/"><img src="Imagens/imagens linkedin.png" width="30px"
                 align="left"></a>
 
         <figure class="foto-fale"> &nbsp;&nbsp;
-            <a href="http://instagram.com/joel_ramos2304"><img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/instagram-icone.png?raw=true" width="30px" align="left </a>
+            <a href="http://instagram.com/joel_ramos2304"><img src="Imagens/instagram-icone.png" width="30px" align="left </a>
             
             <figure class=" foto-fale">
-                <a href="https://discord.com/channels/@me"><img src="https://github.com/JOELS6/Site-Joel-io/blob/main/_imagens/images%20discord.png?raw=true" width="30px"
+                <a href="https://discord.com/channels/@me"><img src="Imagens/images discord.png" width="30px"
                         align="left"> </a>
         </figure>
 
 
-        <h4>Atualizado em 10 de Outubro de 2022</h4>
+        <footer>Atualizado em Outubro de 2022</footer>
 
 
 </body>
