Atualização do H2 e do texto de apresentação.

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
     <br />
     <hr>
     <h2> <span style="font-weight:bold">
-            < Hello World>
+            < Sobre>
         </span><br /></h2>
 
     <div class="foto-hello">
-        <img src="Imagens/eu_logo.png">
+        <img src="Imagens/eu_logo.png" width="90px">
         <alt="minha imagem">
-            <p>Eu sou o Joel Júnior, tenho 41 anos sou Pernambucano mais moro em Fortaleza-Ce desde<br /> o inicio dos
+            <p>Óla eu sou o Joel Júnior, sou Pernambucano mais moro em Fortaleza-Ce desde<br/> o inicio dos
                 anos 90.
-                Sou Bombeiro Civíl a mais de 10 anos e estou em processo de transição<br /> de carreira para a área de
+                Sou Bombeiro Civíl a mais de 10 anos e estou em processo de transição<br/> de carreira para a área de
                 Fullstack focado em Backend Developer.
-                Estarei sempre atualizando<br /> a página com novos códigos e projetos. </p>
+                Estarei sempre atualizando<br /> a página com novos códigos e projetos. 
             </p>
     </div>
     </hr>
-    <br />
+    <br/>
     <h3> <span style="font-weight:bold">
             < Habilidades>
         </span></h3>
