updating H3 and skiil images.

--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
     </div>
     </hr>
     <br/>
-    <h3> <span style="font-weight:bold">
-            < Habilidades>
-        </span></h3>
+    <h3> <span>< Habilidades></span></h3>               
 
-    <figure class="foto-Habilidades">
-        <img src="Imagens/HTML5.png">
-        <alt="imagem html5" align="right>
+        <figure <figure class="foto-Habilidades">
+        <img src="imagens/HTML5.png" width="50px"
+         align="left"><alt="imagem html5</alt> 
                 
-                <figure class=" foto-Habilidades">
-            <img src="Imagens/JS-IMG.png">
-            <alt="imagem Java" align="right>
+        <figure class=" foto-Habilidades">
+        <img src="imagens/JS-IMG.png" width="50px"
+        align="left"><alt="imagem JS"></alt>
 
-                    <figure class=" foto-Habilidades">
-                <img src="Imagens/CSS 3-IMG.png">
-                <alt="imagem css3">
+        <figure class=" foto-Habilidades">
+        <img src="imagens/CSS 3-IMG.png" width="50px"
+        align="left"><alt="imagem css3"></alt> 
     </figure>
-    <br />
+
+    <br/><br/>
+    
     <h3> <span style="font-weight:bold">
             < Fale conosco>
         </span></h3>
