updating photo.skills

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
     <h3> <span>< Habilidades></span></h3>               
 
         <figure <figure class="foto-Habilidades">
-        <img src="imagens/HTML5.png" width="50px"
+        <img src="Imagens/HTML5.png" width="50px"
          align="left"><alt="imagem html5</alt> 
                 
         <figure class=" foto-Habilidades">
-        <img src="imagens/JS-IMG.png" width="50px"
+        <img src="Imagens/JS-IMG.png" width="50px"
         align="left"><alt="imagem JS"></alt>
 
-        <figure class=" foto-Habilidades">
-        <img src="imagens/CSS 3-IMG.png" width="50px"
+        <figure class="foto-Habilidades">
+        <img src="Imagens/CSS 3-IMG.png" width="50px"
         align="left"><alt="imagem css3"></alt> 
     </figure>
 
     <br/><br/>
-    
+
     <h3> <span style="font-weight:bold">
             < Fale conosco>
         </span></h3>
