Adjusting icon position

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <figure class="foto-fale">
          <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/">
          <img src="Imagens/imagens linkedin.png" width="50px" 
-         align="right></a>                
+         align="left"></a>                
 
          <figure class="foto-fale">
             <a href="http://instagram.com/joel_ramos2304">
             <img src="Imagens/instagram-icone.png" width="50px" 
-            align="right"> </a>
+            align="left"> </a>
             
          <figure class="foto-fale">
                 <a href="https://discord.com/channels/@me">
@@ -78,12 +78,12 @@
          <figure class="foto-fale">
             <a href="https://www.freecodecamp.org/JoelRamosdev">
                 <img src="Imagens/imagem freecodecamp.png" width="50px"
-                 align="right" </a>
+                 align="left" </a>
                    
          <figure class=" foto-fale">
             <a href="https://github.com/JOELS6">
             <img src="Imagens/imagem github.png" width="50px" 
-            align="center"> </a>
+            align="left"> </a>
 
         </figure>   
    
