Adjusting font-size in<H4> and Adjusting txt en<P>

--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
     <div class="foto-hello">
         <img src="Imagens/eu_logo.png" width="90px">
         <alt="minha imagem">
-            <p>Óla eu sou o Joel Júnior, sou Pernambucano mais moro em Fortaleza-Ce desde<br/> o inicio dos
-                anos 90.
-                Sou Bombeiro Civíl a mais de 10 anos e estou em processo de transição<br/> de carreira para a área de
+            <p>Olá eu sou o Joel Júnior, sou Pernambucano mais moro em Fortaleza-Ce desde o inicio dos
+                anos 90. Sou Bombeiro Civíl a mais de 10 anos e estou em processo de transição de carreira para a área de
                 Fullstack focado em Backend Developer.
-                Estarei sempre atualizando<br /> a página com novos códigos e projetos. 
+                Estarei sempre atualizando a página com novos códigos e projetos. 
             </p>
     </div>
     </hr>
