Adjusting txt in <P>

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <img src="Imagens/eu_logo.png" width="90px">
         <alt="minha imagem">
             <p>Olá eu sou o Joel Júnior, sou Pernambucano mais moro em Fortaleza-Ce desde o inicio dos
-                anos 90. Sou Bombeiro Civíl a mais de 10 anos e estou em processo de transição de carreira para a área de
+                anos 90. Sou Bombeiro Civíl a mais de 10 anos <br/>e estou em processo de transição de carreira para a área de
                 Fullstack focado em Backend Developer.
-                Estarei sempre atualizando a página com novos códigos e projetos. 
+                Estarei sempre atualizando a página com novos <br/>códigos e projetos. 
             </p>
     </div>
     </hr>
