--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Olá eu sou o Joel Júnior, sou Pernambucano mais moro em Fortaleza-Ce desde o inicio dos
                 anos 90. Sou Bombeiro Civíl a mais de 10 anos <br/>e estou em processo de transição de carreira para a área de
                 Fullstack focado em Backend Developer.
-                Estarei sempre atualizando a página com novos <br/>códigos e projetos. 
+                Estarei sempre atualizando a página <br/>com novos códigos e projetos. 
             </p>
     </div>
     </hr>
