--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           </head>
 
  <body>
+   <form></form>
         <nav id="menu-h">
              <ul>
              <li><a href="#">Home</a></li>
@@ -20,7 +21,7 @@
              <li><a href="#">Entrar</a></li>
             </ul>
         </nav>
-
+      </form>
 
      <br />
      <hr>
