alteração no form do menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           </head>
 
  <body>
-   <form></form>
+   <form>
         <nav id="menu-h">
              <ul>
              <li><a href="#">Home</a></li>
