--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-  <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Joel Ramos</title>
-  <link rel="stylesheet" href="./css/style.css" 
-  
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Joel Ramos</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <link href="Imagens/LOGO JOEL RAMOS.png" rel="shotcut icon" >
+</head>
+
 
  <body>
     <form>
