incluindo novo painel e divisoes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <img src="imagens/IMG_9674 COPIA.png" id="ft-perfil" width="150px" alt="Joel Ramos logo" class="panel-cover_logo logo">    
     <a href="https://github.com/JoelRamosdev"  title="Link for my github"> Joel Ramos </a>
    </div>
+
+   <h1 class="panel-cover__title panel-title"></h1>
+   <hr class="panel-cover__divider">
+   <p class="panel-cover__description">Futuro Desenvolvedor.</p>
+   <hr class="panel-cover__divider panel-cover__divider--secundary">    
+   </div>
+   </div>      
+   <div class="panel-cover--overlay"></div>  
+   
 </body>
 </div>
 </header>
