--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
    </div>
    </div>      
    <div class="panel-cover--overlay"></div>  
-   
+
+   <figure class="foto-fale">
+      <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/">
+         <img src="imagens/imagens linkedin.png" width="30px">
+     </a>       
 </body>
 </div>
 </header>
