--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
    <figure class="foto-fale">
       <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/">
          <img src="imagens/imagens linkedin.png" width="30px">
-     </a>       
+     </a>  
+     <figure class="foto-fale"> 
+      <a href="http://instagram.com/joel_ramos2304">
+         <img src="imagens/instagram-icone.png" width="30px" > 
+     </a>
+     /*Incluindo img com link para o instagram*/     
 </body>
 </div>
 </header>
