Incluindo img com link para o Discord

--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
    </div>
    </div>      
    <div class="panel-cover--overlay"></div>  
-
+   /*Incluindo img com link para o linkedin*/
    <figure class="foto-fale">
       <a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/">
          <img src="imagens/imagens linkedin.png" width="30px">
      </a>  
+     /*Incluindo img com link para o instagram*/
      <figure class="foto-fale"> 
       <a href="http://instagram.com/joel_ramos2304">
          <img src="imagens/instagram-icone.png" width="30px" > 
      </a>
-     /*Incluindo img com link para o instagram*/     
+     /*Incluindo img com link para o Discord*/
+     <figure class=" foto-fale">
+      <a href="https://discord.com/channels/@me">
+         <img src="imagens/images discord.png" width="30px"> 
+     </a> 
 </body>
 </div>
 </header>
