Incluindo img com link para o freecodecamp

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       <a href="https://discord.com/channels/@me">
          <img src="imagens/images discord.png" width="30px"> 
      </a> 
+     /*Incluindo img com link para o freecodecamp/
+     <figure class=" foto-fale">
+      <a href="https://www.freecodecamp.org/JoelRamosdev">   
+     <img src="Imagens/imagem freecodecamp.png" width="30px"> 
+     </a>
 </body>
 </div>
 </header>
