Incluindo img com link para o github

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
       <a href="https://www.freecodecamp.org/JoelRamosdev">   
      <img src="Imagens/imagem freecodecamp.png" width="30px"> 
      </a>
+     /*Incluindo img com link para o github/
+     <figure class=" foto-fale">
+      <a href="https://github.com/JOELS6">
+         <img src="Imagens/imagem github.png" width="30px"> 
+     </a>                        
+     </figure>
 </body>
 </div>
 </header>
