--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="panel-main">
         <div class="panel-main__inner panel-inverted">
     <div class="painel-main__content">
-    <img src="imagens/IMG_9674 COPIA.png" id="ft-perfil" width="150px" alt="Joel Ramos logo" class="panel-cover_logo logo">    
+    <img src="Imagens/IMG_9674 COPIA.png" id="ft-perfil" width="150px" alt="Joel Ramos logo" class="panel-cover_logo logo">    
     <a href="https://github.com/JoelRamosdev"  title="Link for my github"> Joel Ramos </a>
    </div>
 
