--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Joel Ramos</title>
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <link href="Imagens/LOGO JOEL RAMOS.png" rel="shotcut icon">
+    <link rel="icon" type="imagem/png" sizes="16x16" href="Imagens/LOGO JOEL RAMOS.png"
 </head>
 
 <body>
