Atualizei a URL do github

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
      </a>
      
      <figure class=" foto-fale">
-      <a href="https://github.com/JOELS6">
+      <a href="https://github.com/JoelRamosdev">
          <img src="Imagens/imagem github.png" width="30px"> 
      </a>                        
      </figure>
