--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   </ul>
 
   <ul class="social-icons">
-    <li><a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/"><img src="Imagens/imagens linkedin.png" width="30px"></a></li>
-    <li><a href="http://instagram.com/joel_ramos2304"><img src="Imagens/instagram-icone.png" width="30px"></a></li>
-    <li><a href="https://discord.com/channels/@me"><img src="Imagens/images discord.png" width="30px"></a></li>
-    <li><a href="https://www.freecodecamp.org/JoelRamosdev"><img src="Imagens/imagem freecodecamp.png" width="30px"></a></li>
-    <li><a href="https://github.com/JoelRamosdev"><img src="Imagens/imagem github.png" width="30px"></a></li>
+    <li><a href="http://www.linkedin.com/in/joel-ramos-8255ab24b/" target="_blank"><img src="Imagens/imagens linkedin.png" width="30px"></a></li>
+    <li><a href="http://instagram.com/joel_ramos2304" target="_blank"><img src="Imagens/instagram-icone.png" width="30px"></a></li>
+    <li><a href="https://discord.com/channels/@me" target="_blank"><img src="Imagens/images discord.png" width="30px"></a></li>
+    <li><a href="https://www.freecodecamp.org/JoelRamosdev" target="_blank"><img src="Imagens/imagem freecodecamp.png" width="30px"></a></li>
+    <li><a href="https://github.com/JoelRamosdev" target="_blank"><img src="Imagens/imagem github.png" width="30px"></a></li>
   </ul>
   
 </div>
