acrescentando data e hota

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
   </ul>
   
 </div>
+
+<div id="data-hora"></div>
+<script src="script.js"></script>
+<script>
+    // Chame a função JavaScript definida em script.js
+    exibirHoraAtual();
+    
+</script>
+
 </body>
 
 </header>
